# ethzasl_icp_mapping

ethzasl_icp_mapper/launch/velodyne_64e/: grizzly_dynamic_mapper_outdoor.launch
ethzasl_icp_mapper/src/: framebyframeICP.cpp
icp_odometry/: CMakeLists.txt  package.xml
icp_odometry/src/: icp_odometry_node.cpp
